<resources>
    <string name="app_name">Ninja11</string>
    <string name="title_home">Home</string>
    <string name="title_mymatches">Matches</string>
    <string name="title_account">Accounts</string>
    <string name="title_more">More</string>

    <string name="default_notification_channel_id">Ninja11</string>
    <string name="notifications_admin_channel_name">Ninja11</string>
    <string name="notifications_admin_channel_description">Fantasy Cricket</string>

    <string name="screen_name_login">Login</string>
    <string name="screen_name_register">Register</string>
<<<<<<< Updated upstream
    <string name="privacy_policies">By loggin in, you accept you are 18+ and agree to our </string>
    <string name="tnc_text"><u> T&amp;C </u></string>
    <string name="and">&amp; </string>
=======
    <string name="privacy_policies">By loggin in, you accept you are 18+ and agree to our</string>
    <string name="tnc_text"><u> T&amp;C </u></string>
    <string name="and">&amp;</string>
>>>>>>> Stashed changes
    <string name="privacypolicy_text"> <u>Privacy Policy </u></string>
    <string name="state_warnings"> We do not allow players from Telangana, Orissa, Sikkim, Nagaland and Assam to play cash games. You  ust be 18+ years to play real money skill games</string>
    <string name="activity_type_contest">Contest</string>
    <string name="activity_type_create_team">Create Team</string>
    <string name="view_all_contest">View all %s contest</string>

    <string name="game_type_cricket">Cricket</string>
    <string name="game_type_football">Football</string>
    <string name="game_type_basketball">Basketball</string>
    <string name="game_type_hockey">Hockey</string>
    <string name="game_type_volleyball">Volleyball</string>
    <string name="msg_no_matches">There are no upcoming matches as of now</string>

    <string name="contest_type_contests">Contests</string>
    <string name="contest_type_mycontest">My Contest(0)</string>
    <string name="contest_type_myteam">My Team(0)</string>
<<<<<<< Updated upstream
=======
    <string name="contest_type_playerstats">Stats</string>
>>>>>>> Stashed changes

    <string name="createteam_type_wk">WK(0)</string>
    <string name="createteam_type_bat">BAT(0)</string>
    <string name="createteam_type_ar">AR(0)</string>
    <string name="createteam_type_bowl">BOWL(0)</string>

    <string name="menu_home">Home</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="option_wallet">My Wallet</string>
    <string name="option_mytransaaction">My Transactions</string>
    <string name="option_tnc">Terms and Condition</string>
    <string name="option_privacy">Privacy Policy</string>
    <string name="option_aboutus">About us</string>
    <string name="option_logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="mymatch_upcoming">Upcoming</string>
    <string name="mymatch_live">Live</string>
    <string name="mymatch_completed">Completed</string>

    <string name="downloading">Downloading&#8230;</string>
    <string name="title_file_download">APK is downloading</string>
    <string name="storage_access_required">Storage access is required to downloading the file.</string>
    <string name="storage_permission_denied">Storage permission request was denied.</string>
    <string name="ok">OK</string>

    <string name="facebook_app_id">251742452647735</string>
    <string name="fb_login_protocol_scheme">fb251742452647735</string>
    <string name="file_provider">image_sports_fight</string>
    <string name="prize_break_up_note">"Note: The actual prize money may be different than the prize money mentioned above if there is a tie for any of the winning positions. As per the government regulations,a tax of 31.2% will be deducted if an individual wins more than ₹10,000" </string>


    <string-array name="india_states">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>

    <string name="gcm_default_sender_id">"701940049916"</string>
    <string name="razorpaythemecolor">"#0172ac"</string>
    <string name="razorpay_key">rzp_live_SiMilNQfyJNzJe</string>
    <string name="label_login_agree">By creating an account or logging in, you agree to Ninja11</string>
    <string name="label_policy">READ Ninja11 Policies</string>
    <string name="label_acceptance1">By joining this,you accept Ninja11 </string>
    <string name="label_acceptance2">And confirm that you are not a resident of
                Andhra Pradesh, Assam, Odisha, Telangana, Nagaland and Sikkim. I also agree to be contacted by Ninja11 and their partner.</string>
    <string name="label_document_safe">Your documents are safe with "ninja11.in". We do not share this documents with anyone else nor we disclose the personal identifications.</string>
    <string name="label_register_on_sf">"Register on Ninja11 application with referral code "</string>
    <string name="label_supportteam">"Ninja11 Support Team"</string>
    <string name="warning_mobilenumber">"Please enter valid mobile number, to authenticate with Ninja11 system"</string>
    <string name="warning_somethingwentwront">"Something went wrong, please contact Ninja11 team"</string>
    <string name="contact_support_Team">"Contact Ninja11 Support Team"</string>
    <string name="label_update">Ninja11 Update</string>
    <string name="verify_communication">Verify Communication</string>
    <string name="my_reward_points">(100 points = ₹1.00)</string>
<<<<<<< Updated upstream
    <string name="share_this_code_with_your_friends">Share this code with your friends and after they Signup, both of you will get ₹100 Bonus.</string>
    <string name="arrow_image">arrow image</string>
    <string name="lineup_feature">Lineup feature is for your convenience. Please do due research before create team.</string>
=======
    <string name="share_this_code_with_your_friends">Share this code with your friends and after SignUp, You will get ₹100 Bonus. Terms Apply</string>
    <string name="arrow_image">arrow image</string>
    <string name="lineup_feature">Lineup feature is for your convenience. Please do due research before create team.</string>
    <string name="internetconnection">Please check your Internet connection</string>

    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="refer">Refer Friends</string>
    <string name="live_score">Live Score</string>
    <string name="point_system">Point System</string>
    <string name="more">More</string>
    <string name="logout">Logout</string>

    <string-array name="nav_drawer_labels_new">
        <item>@string/profile</item>
        <item>@string/wallet</item>
        <item>@string/refer</item>
        <!--<item>@string/live_score</item>-->
        <item>@string/point_system</item>
        <item>@string/more</item>
        <item>@string/logout</item>
    </string-array>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>


    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="login_with_mobile_number">Login With Mobile</string>
    <string name="continue_with_phone">Continue with Phone</string>
    <string name="enter_your_phone_number">" your mobile number"</string>
    <string name="enter_phone_number_here">Enter mobile number here</string>
    <string name="continue_amp_verify"><![CDATA[Continue & Verify]]></string>
    <string name="verify_and_wait">Verify and Proceed</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="enter_otp_we_just_sent_to_your_phone_number">" OTP We just Sent to your Phone Number"</string>
    <string name="verify_amp_next"><![CDATA[Verify & Next]]></string>
    <string name="resend">Resend</string>
    <string name="time_remaining_2_00s">Time Remaining 2:00s</string>
    <string name="or">or</string>
    <string name="by_logging_in_you_accept_you_are_18_amp_agree_to_our"><![CDATA[By logging in, You accept you are 18+ & Agree to our]]></string>
    <string name="t_c"><![CDATA[T&C]]></string>
    <string name="aand"> <![CDATA[&]]> </string>
    <string name="privacy"> Privacy</string>
    <string name="need_help">Need Help</string>
    <string name="india_s_biggest_fantasy_sports_platform">INDIA\'S BIGGEST FANTASY SPORTS PLATFORM</string>
    <string name="please_enter_passcode">Please Enter Passcode</string>
    <string name="clear">clear</string>
    <string name="filter">Filter</string>
    <string name="_1_001_above"><![CDATA[1,001 & above]]></string>
    <string name="number_of_teams">Number of teams</string>
    <string name="single_entry">Single Entry</string>
    <string name="multi_entry">Multi Entry</string>
    <string name="single_winner">Single Winner</string>
    <string name="multi_winner">Multi Winner</string>
    <string name="guaranteed">Guaranteed</string>
    <string name="apply">Apply</string>
>>>>>>> Stashed changes
</resources>
