<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="contentviews"
            type="ninja.cricks.ui.login.PhoneLoginActivity" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/_21sdp"
            android:layout_height="@dimen/_21sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_and_wait"
            android:textColor="#070707"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="normal"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintBottom_toBottomOf="@+id/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/back" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_otp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/back"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/_172sdp"
            android:layout_height="@dimen/_172sdp"
            android:src="@drawable/ic_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:letterSpacing="-0.02"
            android:text="@string/confirm_otp"
            android:textColor="#070707"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_semi_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/enter_otp_we_just_sent_to_your_phone_number"
            android:textAlignment="center"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <com.mukesh.OtpView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            android:inputType="number"
            android:textColor="@android:color/black"
            app:OtpItemCount="6"
            app:OtpItemSpacing="@dimen/_5sdp"
            app:OtpLineColor="#000000"
            app:OtpState_filled="true"
            app:OtpViewType="rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/timer_otp_detect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/time_remaining_2_00s"
            android:textColor="#707070"
            android:textSize="@dimen/dimen_16sp"
            android:typeface="normal"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toStartOf="@+id/otp_view"
            app:layout_constraintTop_toBottomOf="@+id/otp_view" />

        <TextView
            android:id="@+id/resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/resend"
            android:textColor="#1a3cb5"
            android:textSize="@dimen/dimen_17sp"
            android:textStyle="normal"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintBottom_toBottomOf="@+id/timer_otp_detect"
            app:layout_constraintEnd_toEndOf="@+id/otp_view"
            app:layout_constraintTop_toTopOf="@+id/timer_otp_detect" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_27sdp"
            android:background="@drawable/ractangle_curve_bg"
            android:backgroundTint="#193db5"
            android:text="@string/verify_amp_next"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="normal"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer_otp_detect" />
    </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_passcode"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/back"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone">
            <EditText
                android:id="@+id/edit_passcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Please Enter Passcode"
                android:maxLength="6"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/_50sdp"
                android:inputType="number"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:letterSpacing="-0.02"
                android:layout_marginBottom="@dimen/_16sdp"
                android:textColor="#070707"
                android:textSize="25sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/please_enter_passcode"
                app:layout_constraintBottom_toTopOf="@+id/edit_passcode"
                app:layout_constraintEnd_toEndOf="@+id/edit_passcode"
                app:layout_constraintStart_toStartOf="@+id/edit_passcode" />
            <Button
                android:id="@+id/btn_countinue"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_27sdp"
                android:background="@drawable/ractangle_curve_bg"
                android:backgroundTint="#193db5"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="normal"
                android:fontFamily="@font/poppins_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_passcode" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
