<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="contentviews"
            type="ninja.cricks.ui.login.PhoneNumberActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme_color_hdr">

        <ImageView
            android:id="@+id/close"
            android:layout_width="@dimen/_19sdp"
            android:layout_height="@dimen/_19sdp"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:paddingRight="@dimen/_10sdp"
            android:src="@drawable/ic_close_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/continue_with_phone"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:fontFamily="open_sans"
            android:gravity="center_horizontal"
            android:text="@string/continue_with_phone"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/close"
            app:layout_constraintEnd_toEndOf="@id/imageView5"
            app:layout_constraintStart_toStartOf="@id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/close" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="@dimen/_179sdp"
            android:layout_height="@dimen/_183sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/ic_verify_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/close" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:fontFamily="open_sans"
            android:gravity="center_horizontal"
            android:text="You&apos;ll Receive a 6 digit code to verify next"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="open_sans"
            android:gravity="center_horizontal"
            android:text="@string/enter_your_phone_number"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/et_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <TextView
                android:id="@+id/txt_country_code"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="open_sans"
                android:gravity="center"
                android:text="+91"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/ed_phone_no"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_toEndOf="@id/txt_country_code"
                android:background="@drawable/et_style"
                android:fontFamily="open_sans"
                android:gravity="center_vertical"
                android:hint="@string/enter_phone_number_here"
                android:inputType="phone"
                android:lineSpacingExtra="10sp"
                android:maxLength="10"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textCursorDrawable="@null"
                android:textSize="14sp"
                android:textStyle="normal" />
        </RelativeLayout>

        <Button
            android:id="@+id/verify"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/ractangle_curve_bg"
            android:backgroundTint="@color/white"
            android:padding="@dimen/_5sdp"
            android:text="@string/continue_amp_verify"
            android:textAllCaps="false"
            android:textColor="#333434"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>